namespace SimpleGraphCalculatorAndPlotter.Models
{
    /// <summary>
    /// The enumeration of all available function types that can be used with <see cref="ISGCPModel"/>.
    /// </summary>
    public enum FunctionType
    {
        Sin,
        Cos,
        Sinc
    }
}