@startuml
'https://plantuml.com/de/class-diagram

title SimpleGraphCalculatorAndPlotter

interface ISGCPModel
interface ISGCPPlotter
interface ISGCPRenderer
interface ISGCPExporter

SGCPModel <|-- ISGCPModel
SGCPPlotter <|-- ISGCPPlotter
SGCPRenderer <|-- ISGCPRenderer
SGCPExporter <|-- ISGCPExporter

SGCPViewModel *-- SGCPModel
SGCPModel *-- SGCPPlotter
SGCPModel *-- SGCPRenderer
SGCPModel *-- SGCPExporter

enum FunctionType 
{
    Sin
    Cos
    Sinc
}

class SGCPViewModel
{
    +ICommand SaveCommand
    +string FunctionString
    +ISGCPModel Model
}

class SGCPModel
{
    +void SaveImage()
    -ISGCPPlotter plotter
    -ISGCPRenderer renderer
    -ISGCPExporter exporter
}

interface ISGCPModel
{
    +FunctionType FunctionType
    +double A
    +double B
    +double C
    +double D
    +double Range    
    +Bitmap Image
}

interface ISGCPPlotter
{
    +(double x, double y)[] Plot(FunctionType functionType, 
    double a, double b, double c, double d,double range))
}

interface ISGCPRenderer
{
    +int ImageWidth
    +int ImageHeight
    +Bitmap Render((double x, double y)[] coordinates, (double x, double y)[] coordinatesDefaultFunction)
}

interface ISGCPExporter
{
    +void Export(string filePath, (double x, double y)[] coordinates)
}

@enduml